<resources>
    <string name="app_name">HealthEndar</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="calendar">Calendar</string>
    <string name="Calendar">Calendar</string>
    <string name="add">Add</string>
    <string name="Appointments">Appointments</string>
    <string name="Today"> Today</string>
    <string name="Reminders"> Reminders</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_visit">VisitActiviity</string>
    <string name="title_activity_add_visit">AddVisityActivity</string>
    <string name="doctor_specialization">Doctor specialization</string>
    <string name="doctor_name_surname">Doctor name, surname</string>
    <string name="date">Date</string>
    <string name="hour">Hour</string>
    <string name="email">email</string>
    <string name="phone">Phone</string>
    <string name="remind_me_later">Remind me later</string>
    <string name="done">done</string>
    <string name="login">Login</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="email_is_not_valid">Email is not valid</string>
    <string name="password_wrong">Password must contain at least 8 chars and one number and one letter</string>
    <string name="password_repeated_pass">Password and repeated password must be the same</string>
    <string name="could_not_register_user">Could not register user</string>
</resources>