<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add_appointment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFBF8"
    android:theme="@style/Theme.AppCompat.Light.NoActionBar"
    android:visibility="visible"
    tools:context=".ui.AddVisitActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/toolbar_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#D2DBD1"
        android:fitsSystemWindows="true"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways" />

    </com.google.android.material.appbar.AppBarLayout>


    <EditText
        android:id="@+id/doctor_specialization_textbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:ems="10"
        android:hint="@string/doctor_specialization"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/doctor_name_textbox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_wrapper" />

    <EditText
        android:id="@+id/doctor_name_textbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:ems="10"
        android:hint="@string/doctor_name_surname"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@id/date_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/doctor_specialization_textbox"
        android:autofillHints="" />


    <TextView
        android:id="@+id/date_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:fontFamily="@font/droidsansmono"
        android:text="@string/date"
        android:textColor="#ff716B6B"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/time_text_view"
        app:layout_constraintEnd_toStartOf="@+id/set_date_button"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/doctor_name_textbox" />

    <TextView
        android:id="@+id/time_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:fontFamily="@font/droidsansmono"
        android:text="@string/hour"
        android:textColor="#ff716B6B"
        android:textSize="20sp"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintBottom_toTopOf="@+id/email_edit_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/set_time_button"
        app:layout_constraintTop_toBottomOf="@id/date_text_view" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/set_date_button"
        style="?attr/materialIconButtonOutlinedStyle"
        android:layout_width="71dp"
        android:layout_height="71dp"
        android:layout_margin="@dimen/margin"
        android:backgroundTint="#92B793"
        app:icon="@drawable/baseline_calendar_month_24"
        app:layout_constraintBottom_toTopOf="@+id/set_time_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/date_text_view"
        app:layout_constraintTop_toBottomOf="@+id/doctor_name_textbox" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/set_time_button"
        style="=?attr/materialIconButtonOutlinedStyle"
        android:layout_width="71dp"
        android:layout_height="71dp"
        android:layout_margin="@dimen/margin"
        android:backgroundTint="#92B793"
        app:icon="@drawable/baseline_add_alarm_24"
        app:layout_constraintBottom_toTopOf="@+id/email_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/time_text_view"
        app:layout_constraintTop_toBottomOf="@id/set_date_button"/>

    <EditText
        android:id="@+id/email_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:textColor="#ff716B6B"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/time_text_view"
        app:layout_constraintBottom_toTopOf="@id/phone_edit_text"
        android:layout_margin="@dimen/margin"

        android:autofillHints="" />

    <EditText
        android:id="@+id/phone_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:ems="10"
        android:inputType="phone"
        android:hint="@string/phone"
        app:layout_constraintTop_toBottomOf="@id/email_edit_text"
        app:layout_constraintBottom_toTopOf="@id/spacer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:autofillHints="" />
    <Space
        android:id="@+id/spacer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintVertical_weight="5"
        android:layout_margin="@dimen/margin"
        app:layout_constraintTop_toBottomOf="@id/phone_edit_text"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>