<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.AppCompat.Light.NoActionBar"
    android:id="@+id/main_fragment"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.MainFragment">

    <TextView
        android:id="@+id/calendarText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/droid_sans_bold"
        android:text="@string/Calendar"
        android:textColor="#ff749775"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/appointmentText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="@dimen/margin"/>

    <TextView
        android:id="@+id/appointmentText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/droidsansmono"
        android:text="@string/Appointments"
        android:textColor="#ff716B6B"
        android:textSize="20sp"
        android:layout_margin="@dimen/margin"
        app:layout_constraintBottom_toTopOf="@+id/calendarView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calendarText"/>

    <CalendarView
        android:id="@+id/calendarView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        app:layout_constraintBottom_toTopOf="@+id/calendar_items_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appointmentText"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/calendar_items_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/margin"
        android:background="@drawable/rounded_bg"
        android:padding="@dimen/margin"
        app:layout_constraintTop_toBottomOf="@id/calendarView"
        app:layout_constraintBottom_toTopOf="@+id/add_visit_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Space
        android:id="@+id/spacer_calendar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_weight="4"
        app:layout_constraintTop_toBottomOf="@id/calendar_items_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/add_visit_button"/>
    <com.google.android.material.button.MaterialButton
        app:layout_constraintHorizontal_weight="1"
        android:id="@+id/add_visit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#92B793"
        android:text="@string/add"
        android:layout_margin="@dimen/margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/calendar_items_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/spacer_calendar"/>


</androidx.constraintlayout.widget.ConstraintLayout>